--- a/css/styles.css
+++ b/css/styles.css
@@ -261,7 +261,7 @@ p {
 h3 {
   color: #11999e;
   font-family: "League Spartan", sans-serif;
-  margin-left: 15px;
+  /* margin-left: 15px; */
 }
 
 .lasth3 {
