--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,11 @@
 
 body {
   text-align: center;
-  padding: 30px;
+  /* padding: 30px; */
   font-family: "League Spartan", sans-serif;
+  background-color: #f4b7c7;
+  height: 1024px;
+  width: 100%;
 }
 
 .header {
@@ -101,6 +104,11 @@ body {
   }
 }
 
+/* main {
+  height: 1024px;
+  width: 100%;
+} */
+
 /* .top-container {
   background-color: linear-gradient(to bottom, #b2ebf2, #0097a7);
   background-position: top;
@@ -181,33 +189,35 @@ body {
 } */
 
 .skill-row1 {
-  width: 50%;
+  width: 60%;
   position: block;
   margin: 80px auto 50px auto;
   background-color: #f1f3f583;
   border-radius: 10px;
-  box-shadow: 2px 2px 2px 1px rgba(1, 1, 1, 0.07);
-  padding: 18px;
+  box-shadow: 2px 2px 2px rgba(1, 1, 1, 0.3);
+  padding: 48px 28px;
 
   /* line-height: 190%; */
 }
 .skill-row2 {
-  width: 50%;
+  width: 60%;
+
   position: block;
   margin: 0 auto 120px auto;
   background-color: #f1f3f583;
   border-radius: 10px;
-  box-shadow: 2px 2px 2px 1px rgba(1, 1, 1, 0.07);
-  padding: 18px;
+  box-shadow: 2px 2px 2px rgba(1, 1, 1, 0.3);
+  padding: 48px 28px;
 
   /* line-height: 190%; */
 }
 
 .pheader3 {
-  position: block;
+  /* position: block; */
   font-size: 16px;
   color: #213c4591;
-  justify-content: center;
+  font-weight: 400;
+  /* line-height: 1.5rem; */
   font-family: "Montserrat", sans-serif;
 }
 
@@ -219,10 +229,11 @@ body {
 
 .developer-img {
   height: auto;
+  min-height: 50%;
   width: 17%;
-  max-width: 100%;
+  max-width: 80%;
   float: left;
-  margin-right: 30px;
+  margin-right: 20px;
 }
 
 /* .profile-p {
@@ -232,11 +243,12 @@ body {
 
 .design-img {
   height: auto;
+  min-height: 50%;
   width: 17%;
-  max-width: 100%;
+  max-width: 80%;
   float: left;
-  margin-right: 30px;
-  margin-left: 5px;
+  margin-right: 20px;
+  /* margin-left: 5px; */
 }
 
 h4 {
@@ -335,20 +347,24 @@ h4 {
   font-family: "League Spartan", sans-serif;
 } */
 
-h3 {
-  color: #66bfbf;
+/* h3 {
+  color: #234567;
   font-family: "League Spartan", sans-serif;
   font-weight: 700;
   margin-left: 15px;
   font-size: 44px;
-}
+  text-shadow: 0 5px 2px black;
+} */
 
 .header3 {
-  color: #66bfbf;
+  color: #234567;
   font-family: "League Spartan", sans-serif;
   font-weight: 700;
   margin-left: 15px;
   font-size: 36px;
+  display: flex;
+  /* justify-content: flex-end; */
+  text-shadow: 0 1px 1px black;
 }
 
 /* .lastP {
@@ -357,8 +373,12 @@ h3 {
   margin-left: 25px;
 } */
 
+.button-container {
+  display: inline;
+}
+
 .contact-me {
-  width: 30%;
+  /* width: 100%; */
   margin: 40px auto 60px;
   text-align: center;
   color: #66bfbf;
@@ -366,12 +386,35 @@ h3 {
 
 .cta {
   position: relative;
-  margin: auto;
+  /* margin: auto; */
   padding: 12px 18px;
   transition: all 0.2s ease;
   border: none;
   background: none;
   text-align: center;
+  margin-left: 18%;
+}
+
+.cta.b {
+  position: relative;
+  /* margin: auto; */
+  padding: 12px 18px;
+  transition: all 0.2s ease;
+  border: none;
+  background: none;
+  text-align: center;
+  margin-left: 10px;
+}
+
+.cta.c {
+  position: relative;
+  /* margin: auto; */
+  padding: 12px 18px;
+  transition: all 0.2s ease;
+  border: none;
+  background: none;
+  text-align: center;
+  margin-left: 10px;
 }
 
 .cta:before {
@@ -458,4 +501,8 @@ a:hover {
   font-family: "League Spartan", sans-serif;
   color: #fff;
   font-size: 20px;
+}
+
+a.footer-link:hover {
+  color: #234567;
 }
