--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,10 @@ body {
 
 .bodycontainer {
   height: 300px;
-  
+
 }
+
+
 
 h1 {
   margin-left: 50px;
@@ -57,6 +59,14 @@ h5 {
   background-position: center bottom;
 
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+}
+
+.primary-sub {
+  transform: rotate(0deg);
+}
+
+.primary-main {
+  transform: rotate(0deg);
 }
 
 /* h1 {
