--- a/css/styles.css
+++ b/css/styles.css
@@ -8,23 +8,20 @@ body {
   text-align: center;
   /* padding: 30px; */
   font-family: "League Spartan", sans-serif;
-  background-color: #000000!important;
+  background-color: #fff !important;
   height: 1024px;
   width: 100%;
 }
 
 .bodycontainer {
   height: 500px;
-
 }
-
-
 
 h1 {
   margin-left: 50px;
-  font-family: "Monteserrat" , sans-serif;
+  font-family: "Monteserrat", sans-serif;
   transform: rotate(-4deg);
-  font-size: 36px!important;
+  font-size: 36px !important;
 }
 
 h2 {
@@ -54,10 +51,7 @@ h5 {
   background-image: linear-gradient(to right bottom, #b2ebf2d6, #00c5dbd6),
     url(../images/galaxy.jpg);
   background-size: cover;
-  /* position: relative; 
-  */
   background-position: center bottom;
-
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
@@ -85,7 +79,6 @@ h5 {
 } */
 
 .primary-main {
-  font-size: 60px;
   font-weight: 700;
 
   position: relative;
@@ -147,90 +140,6 @@ h5 {
     transform: translate(0);
   }
 }
-
-/* main {
-  height: 1024px;
-  width: 100%;
-} */
-
-/* .top-container {
-  background-color: linear-gradient(to bottom, #b2ebf2, #0097a7);
-  background-position: top;
-  /* position: relative; */
-/* padding-top: 90px; */
-/* background-size: cover; */
-
-/* margin-bottom: 25px; */
-/* margin: auto;
-} */
-
-/* .bodyclass {
-  display: none;
-}
-@media (min-width: 320px) {
-  .bodyclass {
-    display: block;
-  }
-} */
-
-/* .cloud1 {
-  height: auto;
-  width: 18%;
-  display: flex;
-  position: relative;
-  margin: 0 30px 30px 30px;
-  background-size: cover;
-  opacity: 60%;
-} */
-
-/* .cloud2 {
-  height: auto;
-  width: 18%;
-  position: relative;
-  display: flex;
-  top: -60px;
-  margin: -30px 60px 40px 60px;
-} */
-
-/* .cloud2 {
-  position: relative;
-  margin-left: 100px;
-  display: flex;
-} */
-
-/* .cloud3 {
-  width: 18%;
-  height: auto;
-  position: relative;
-  display: relative;
-  right: 170px;
-  top: 0;
-  margin: 40px 60px 40px 60px;
- 
-} */
-
-/* .clouddiv {
-  min-width: auto;
-  max-width: 50%;
-  height: auto;
-} */
-
-/* .mountain {
-  height: auto;
-  max-width: 100%;
-  width: 50%;
-  position: relative;
-  display: flex;
-  bottom: 100px;
-  margin: 40px -39px 40px auto;
-} */
-
-/* .profileImg {
-  position: relative;
-  top: 100px;
-  left: 0;
-  bottom: 400px;
-} */
 
 .skill-row1 {
   width: 60%;
@@ -331,41 +240,6 @@ h4 {
   margin: 0 100px 60px auto;
   color: #66bfbf;
 }
-
-/* .dotted {
-  border-style: dotted;
-  height: 23px;
-  width: 23px;
-  background-color: #e4f6f6;
-  border-radius: 100%;
-  border: none !important;
-  position: relative;
-  display: inline-block;
-}
-
-.dotted2 {
-  border-style: dotted;
-  height: 23px;
-  width: 23px;
-  background-color: #e4f6f6;
-  border-radius: 100%;
-  border: none !important;
-  position: relative;
-  display: inline-block;
-}
-
-.dotted3 {
-  border-style: dotted;
-  height: 23px !important;
-  width: 23px !important;
-  /* background-color: #66bfbf; */
-/* color: #66bfbf; */
-/* border-radius: 100%; */
-/* border: none; */
-/* position: relative !important; */
-/* display: inline-block; */
-/* margin-left: 23px; */
-/* } */
 
 /* .h2header2 {
   color: #66bfbf;
